<resources>
    <string name="app_name">Minima</string>
    <string name="app_version" translatable="false">0.12.1</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_save">Save to storage</string>
    <string name="in_dev">In dev…</string>
    <string name="start_typing">Start typing your note here…</string>
    <string name="proceed">This action cannot be undone, do you want to proceed?</string>
    <string name="database_deleted">Database deleted</string>
    <string name="save_changes">Save the changes?</string>
    <string name="updated_note">Note updated successfully</string>
    <string name="saved_note">Note saved successfully</string>
    <string name="deleted_note">Note deleted successfully</string>
    <string name="duplicated_note">Note duplicated successfully</string>
    <string name="empty_note">The note can\'t be empty</string>
    <string name="error_updating">An error occurred while updating the note…</string>
    <string name="error_saving">An error occurred while saving the note…</string>
    <string name="error_deleting">An error occurred while deleting the note…</string>
    <string name="error_duplicating">An error occurred while duplicating the note…</string>
    <string name="search_note">Search note…</string>
    <string name="storage_permission">Exporting files requires storage permission, enable it in this application\'s permissions</string>
    <string name="exported_file">File exported successfully</string>
    <string name="error_exporting_file">An error occurred while exporting the file</string>
    <string name="insert_pin">Insert your PIN</string>
    <string name="empty_pin">PIN cannot be empty</string>
    <string name="short_pin">PIN must be more than 3 characters</string>
    <string name="stored_pin">PIN saved successfully</string>
    <string name="cant_close_screen">You cannot close this screen</string>
    <string name="choose_font">Choose app font</string>
    <string name="choose_font_size">Choose font size</string>
    <string name="changed_font">App font changed successfully</string>
    <string name="changed_font_size">Font size changed successfully</string>
    <string name="list_order">Last modification</string>
    <string name="list_order_asc">Ascending list order</string>
    <string name="list_order_desc">Descending list order</string>
    <string name="date_time_formats">Date and time formats</string>
    <string name="changed_date_time_format">Changed date and time format</string>
    <string-array name="main">
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string-array name="settings">
        <item>Set PIN password</item>
        <item>Application font</item>
        <item>Font size</item>
        <item>Date and time format</item>
        <item>Export or restore data</item>
        <item>Delete database</item>
    </string-array>
    <string-array name="fonts">
        <item>Crimson Text</item>
        <item>Indie Flower</item>
        <item>Josefin Sans</item>
        <item>Lato</item>
        <item>Nunito</item>
        <item>Open Sans</item>
        <item>Roboto</item>
        <item>Ubuntu</item>
    </string-array>
    <string-array name="font_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="date_time_formats">
        <item>12/31/2021 12h59</item>
        <item>31/12/2021 12h59</item>
        <item>2021/12/31 12h59</item>
    </string-array>
    <string-array name="note_options">
        <item>Delete</item>
        <item>Duplicate</item>
        <item>Share</item>
    </string-array>
    <string-array name="export_options">
        <item>@string/export_as_json</item>
        <item>@string/restore_from_json</item>
    </string-array>
    <string name="remove_pass">Are you sure you want to remove your password?</string>
    <string name="removed_pass">Your password has been successfully removed</string>
    <string name="export_as_json">Export all notes as JSON</string>
    <string name="restore_from_json">Restore notes from JSON file</string>
    <string name="restored_data_from_json">Notes successfully restored</string>
    <string name="warning">WARNING</string>
    <string name="want_to_continue">Continue</string>
    <string name="export_warning">Exporting notes outside of the app will decrypt them, which can compromise information security, so WE DO NOT RECOMMEND that the JSON file remain on your local storage for a long time. We recommend opting for cloud storage or in apps that have file encryption.</string>
    <string name="new_note">New note</string>
</resources>