<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="21dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/insert_pin"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/settingsPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:paddingBottom="18dp"
            android:textSize="21dp"
            android:textColor="@color/white"
            android:maxLength="28"
            android:inputType="numberPassword"
            android:backgroundTint="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settingsCancelPIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/cancel"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settingsValidatePIN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/ok"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>