<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/gray_app_bar">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/mainTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    style="@style/TextAppearance.AppCompat.Title"/>

                <LinearLayout
                    android:id="@+id/mainTools"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/mainSearchIcon"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_search"
                        android:tint="@color/white"
                        android:onClick="showSearchView"
                        tools:ignore="OnClick,UsingOnClickInXml"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/ic_config"
                        android:tint="@color/white"
                        android:onClick="openMenu"
                        tools:ignore="UsingOnClickInXml"/>

                </LinearLayout>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/mainSV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    app:queryHint="@string/search_note"
                    android:visibility="gone"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="21dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal"
                android:gravity="end|center_vertical"
                android:focusable="true"
                android:clickable="true"
                android:onClick="changeOrder"
                tools:ignore="UsingOnClickInXml">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/orderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_order"
                    android:textColor="@color/white"
                    android:textSize="16dp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/orderIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_down"
                    android:tint="@color/white"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:overScrollMode="never"
                tools:listitem="@layout/item_note"
                tools:itemCount="4"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pagesRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="21dp"
                android:layout_marginHorizontal="12dp"
                android:orientation="horizontal"
                android:overScrollMode="never"
                tools:listitem="@layout/item_page"
                tools:itemCount="5"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:tint="@color/black"
        android:onClick="addNote"
        tools:ignore="ContentDescription, UsingOnClickInXml"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>